# cookiecutter-adr-python

./: Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: test_cookiecutter.sh
{{cookiecutter.project_slug}}/: .nvimrc  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/scripts/: check_radon.sh
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docs/adr/: 0001-python-project.md
{{cookiecutter.project_slug}}/hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/tests/: test_foo.py
