[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"


[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "{{ cookiecutter.license }}" }
classifiers = [
"Programming Language :: Python :: 3",
"Programming Language :: Python :: 3 :: Only",
"License :: OSI Approved",
"Typing :: Typed",
]


# Minimal example; add runtime deps here if needed
# dependencies = ["requests>=2"]


[project.urls]
Homepage = "https://github.com/your-org/{{ cookiecutter.project_slug }}"


[project.optional-dependencies]
# `uv sync` installs these by default; use `uv sync --group dev` as needed
dev = [
"pytest>=8",
"pytest-cov>=5",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7",
"adr-tools-python>=2.6; python_version>='3.8'",
]


[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "build", "dist"]


[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
packages = ["{{ cookiecutter.package_name }}"]


[tool.pytest.ini_options]
addopts = "-q --cov={{ cookiecutter.package_name }} --cov-report=term-missing"
# You can also generate HTML with: `uv run pytest --cov-report=html`




[tool.hatch.build.targets.sdist]
include = ["src/**", "README.md", "pyproject.toml", "LICENSE"]


[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]
