[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "Project description for {{ cookiecutter.project_name }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "{{ cookiecutter.license }}" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved",
"Typing :: Typed",
]

[dependency-groups]
dev = [
"pytest>=8",
"pytest-cov>=6",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7"
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "build", "dist"]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
packages = ["{{ cookiecutter.package_name }}"]

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.package_name}}  --cov-report=term-missing"
