[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.project_desc }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
license = { text = "{{ cookiecutter.license }}" }
classifiers = [
"Programming Language :: Python :: 3",
"License :: OSI Approved",
"Typing :: Typed",
]

[dependency-groups]
dev = [
"pytest>=8",
"pytest-cov>=6",
"ruff>=0.5",
"mypy>=1.10",
"pre-commit>=3.7",
"radon>=6.0.1",
"treepeat>=0.1.0"
]

[tool.ruff]
line-length = 100
exclude = [".venv", ".git", "build", "dist"]
lint.select = [
    "E",    # pycodestyle
    "F",    # Pyflakes
    "I",    # isort (automatically sorts and moves imports to top)
    "B",    # flake8-bugbear (find likely bugs and design problems in your program)
    "PLR",  # Pylint Refactor (specifically catches misplaced imports)
    "PLC",  # Pylint Convention (specifically catches imports not at the top of the file)
    "TID",  # Tidy imports
]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
packages = ["{{ cookiecutter.package_name }}"]

[tool.pytest.ini_options]
addopts = "--cov={{cookiecutter.package_name}}  --cov-report=term-missing"
